--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,3 +1,35 @@
-spring: 
-  application: 
-    name: grm-backend 
+﻿spring:
+  application:
+    name: grm-backend
+  
+  datasource:
+    url: jdbc:postgresql://localhost:5432/grm_db
+    username: grm_user
+    password: grm_password
+    driver-class-name: org.postgresql.Driver
+  
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+  
+  flyway:
+    enabled: false
+
+logging:
+  level:
+    root: INFO
+    ro.ctp.grm: DEBUG
+
+server:
+  port: 8080
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
